# rill

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
dashboard/: README.md  package-lock.json  package.json  quack_worker.py  server.js
dashboard/public/: app.js  index.css  index.html
examples/: benchmark_streams.py  live_streaming_demo.py  multi_stream_join_demo.py  quack_dashboard_demo.py
rill/: __init__.py  checkpoint.py  engine.py  metrics.py  output.py  retention.py  schema.py  table.py
rill/compute/: __init__.py  join.py  operations.py  sql.py  upsert.py
rill/connectors/: __init__.py  base.py  file.py  json_stream.py  kafka.py  memory.py  websocket.py
tests/: test_backpressure.py  test_checkpoint.py  test_connectors.py  test_duckdb_sql.py  test_engine.py  test_memory_budget.py  test_metrics.py  test_optimizations.py  test_quack_integration.py  test_retention.py  test_schema.py  test_stream_joins.py  test_table_modes.py  test_upsert.py
