[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rill"
version = "0.1.0"
description = "A lightweight, single-node micro-batching engine designed for high-performance streaming analytics using pure PyArrow and DuckDB."
readme = "README.md"
authors = [
    { name = "LIJOSE" }
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/lijose/rill"
Repository = "https://github.com/lijose/rill"
"Bug Tracker" = "https://github.com/lijose/rill/issues"

requires-python = ">=3.9"
dependencies = [
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0"
]
connectors = [
    "websockets>=11.0",
    "confluent-kafka>=2.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rill*"]
